2011-08-01  Zhenyao Mo  <zmo@google.com>

        Unreviewed, rebaseline, webkit gardener stuff.

        * platform/chromium-mac/svg/custom/repaint-shadow-expected.png: Added.
        * platform/chromium-win/svg/custom/repaint-shadow-expected.png: Added.

2011-08-01  Tim Horton  <timothy_horton@apple.com>

        Severe shadow repaint issues with SVGText elements
        https://bugs.webkit.org/show_bug.cgi?id=63648
        <rdar://problem/7632269>

        Reviewed by Darin Adler.

        Make SVG elements which inherit from RenderSVGBlock take text-shadow
        overflow into account when determining whether or not they should draw

        * platform/mac/svg/custom/repaint-shadow-expected.png: Added.
        * platform/mac/svg/custom/repaint-shadow-expected.txt: Added.
        * svg/custom/repaint-shadow.svg: Added.

2011-08-01  Chris Rogers  <crogers@google.com>

        One more test_expectations.txt fix for windows web audio
        https://bugs.webkit.org/show_bug.cgi?id=65496

        Unreviewed.

        * platform/chromium/test_expectations.txt:

2011-08-01  Zhenyao Mo  <zmo@google.com>

        Unreviewed, rolling out r92022.
        http://trac.webkit.org/changeset/92022
        https://bugs.webkit.org/show_bug.cgi?id=65203

        try to see if this is causing a bunch of browser tests failues
        on win bots - will recommit if not

        * platform/chromium/test_expectations.txt:

2011-08-01  Ryosuke Niwa  <rniwa@webkit.org>

        Remove time out expectation since media/track has been added to the skipped list on Qt.

        * platform/qt/test_expectations.txt:

2011-08-01  Chris Rogers  <crogers@google.com>

        Add audionode.html and gain.html web audio layout tests
        https://bugs.webkit.org/show_bug.cgi?id=65276

        Reviewed by Kenneth Russell.

        * webaudio/audionode-expected.txt: Added.
        * webaudio/audionode.html: Added.
        * webaudio/gain-expected.wav: Added.
        * webaudio/gain.html: Added.