@@ -118,7 +118,7 @@
     <p>The following should be a text box:</p>
     <p><span tabindex="0" role="textbox" id="ariaTextBox">X</span></p>
     <p>Actual text box:</p>
-    <textarea id="realTextBox">Hello</textarea>
+    <input type="text" id="realTextBox"></input>
     <span id="resultTextBox"></span>
     <script>
         validateRole(document.getElementById('ariaTextBox'),
