@@ -9,8 +9,8 @@ var successfullyParsed = false;
 </head>
 <body id="body">
 
-<div tabindex="0" id="textfield" role="textbox" aria-multiline="true">a</div>
-<div tabindex="0" id="textarea" role="textbox" aria-multiline="false">b</div>
+<div tabindex="0" id="textfield" role="textbox" aria-multiline="false">a</div>
+<div tabindex="0" id="textarea" role="textbox" aria-multiline="true">b</div>
 
 <p id="description"></p>
 <div id="console"></div>
