@@ -1,3 +1,13 @@
+2011-08-01  Alice Boxhall  <aboxhall@chromium.org>
+
+        WAI-ARIA textbox role should be AXTextArea for aria-multiline=true, AXTextField for aria-multiline=false
+        https://bugs.webkit.org/show_bug.cgi?id=65451
+
+        Reviewed by Chris Fleizach.
+
+        * accessibility/AccessibilityRenderObject.cpp:
+        (WebCore::AccessibilityRenderObject::determineAriaRoleAttribute):
+
 2011-08-01  srikumar bonda  <srikumar.b@gmail.com>
 
         Use threadsafeCopy() API when using Database Directory path variable 
