@@ -1,3 +1,14 @@
+2011-08-01  Alice Boxhall  <aboxhall@chromium.org>
+
+        WAI-ARIA textbox role should be AXTextArea for aria-multiline=true, AXTextField for aria-multiline=false
+        https://bugs.webkit.org/show_bug.cgi?id=65451
+
+        Reviewed by Chris Fleizach.
+
+        * accessibility/aria-roles.html:
+        * platform/mac/accessibility/aria-multiline.html:
+        * platform/mac/accessibility/aria-roles-expected.txt:
+
 2011-08-01  Zhenyao Mo  <zmo@google.com>
 
         Unreviewed, rebaseline, webkit gardener stuff.
